# placeecho

./: copilot-instructions.md
Backend/: .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
Backend/app/: main.py
Backend/app/api/routes/: context.py  debug_cache.py  generate.py  media.py  story.py  tts.py
Backend/app/core/: config.py  redis_client.py  request_logging.py
Backend/app/providers/: geocoding_google.py  geocoding_mapbox.py  geocoding_osm.py  mapbox_normalizer.py  tts_openai.py
Backend/app/schemas/: common.py  context.py  generate.py  location.py  media.py  story.py  tts.py
Backend/app/scripts/: test_mapbox.py  test_mapbox_normalizer.py
Backend/app/services/: context_service.py  media_service.py  story_service.py  tts_orchestrator.py  tts_service.py
Backend/app/utils/: exif_gps.py  hashing.py
Frontend/: .env  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.tsx  config.ts  env.d.ts  index.css  index.tsx
Frontend/src/components/: AudioPlayer.tsx  CameraCapture.tsx  LoadingSpinner.tsx  LocationCard.tsx  SettingsDrawer.tsx  StoryDisplay.tsx
Frontend/src/contexts/: AuthContext.tsx  AuthContextInstance.ts
Frontend/src/hooks/: useAuth.ts  useCamera.ts  useGeolocation.ts  useStoryGenerator.ts  useTextToSpeech.ts
Frontend/src/pages/: LoginPage.tsx  MainStoryScreen.tsx
Frontend/src/types/: index.ts
Frontend/src/utils/: extractGpsFromImage.ts  reverseGeocode.ts
